# lowlands-heritage-rag

./: .env.example  .gitignore  README.md  compose.yaml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
config/phase3/: discovery_observations_2026-07-17.toml  discovery_queries_v1.toml
docs/: IMPLEMENTATION_PHASES.md  PHASE_2_USER_JOURNEY.md  PHASE_3_CORPUS_POLICY.md  PHASE_3_DISCOVERY_GUIDE.md  PHASE_3_DISCOVERY_REPORT.md  PHASE_3_EUROPEANA_API_LESSON.md  PHASE_4_BRONZE_INGESTION.md  SOLUTION_DESIGN.md
docs/adr/: 0000-template.md  0001-phase-1-repository-foundation.md  0001-use-a-single-package-src-layout.md  0002-phase-2-api-contract-and-interface-prototype.md  0002-use-fastapi-and-pydantic-at-the-api-boundary.md  0002-use-python-3-14.md  0003-phase-3-europeana-discovery-and-corpus-policy.md  0003-serve-a-static-interface-from-fastapi.md  0003-use-uv-for-dependency-management.md  0004-phase-4-reliable-bronze-ingestion.md  0004-use-the-lowlands-lens-package-identity.md  0005-use-uv-build.md  0006-use-environment-based-runtime-configuration.md  0007-use-pytest-ruff-and-mypy.md  0008-use-postgresql-18-with-pgvector-in-compose.md  0009-use-alembic-for-database-migrations.md  0010-use-github-actions-for-basic-ci.md
migrations/: README  env.py
migrations/versions/: 46feab49b164_enable_vector_extension.py
src/lowlands_lens/: __init__.py  domain.py
src/lowlands_lens/adapters/: __init__.py  deterministic_answer_generation.py  in_memory_retrieval.py  (+1 more)
tests/: test_answer_generation.py  test_api.py  test_bronze_storage.py  test_contracts.py  test_discovery_configuration.py  test_discovery_contracts.py  test_discovery_exploration.py  test_discovery_observations.py  test_discovery_query_matrix.py  test_europeana_client.py  test_ingestion_cli.py  test_ingestion_contracts.py  test_ingestion_e2e.py  test_ingestion_pagination_retry.py  test_interface.py  test_package.py  test_retrieval.py
(+32 files in other folders)
