[project]
name = "lowlands-lens"
version = "0.1.0"
description = "A multilingual, evidence-grounded assistant for Belgian cultural heritage from 1900 to the present."
readme = "README.md"
authors = [{ name = "Serhiy" }]
requires-python = ">=3.14,<3.15"
dependencies = []


[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.2,<3",
    "pytest>=9.1,<10",
    "ruff>=0.15,<0.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-config --strict-markers"

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src", "tests"]