[project]
name = "lowlands-lens"
version = "0.1.0"
description = "A multilingual, evidence-grounded assistant for Belgian cultural heritage from 1900 to the present."
readme = "README.md"
authors = [{ name = "Serhiy" }]
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.18.5,<1.19",
    "fastapi>=0.139.0,<0.140",
    "psycopg[binary]>=3.3.4,<3.4",
    "pydantic>=2.13.4,<2.14",
    "sqlalchemy>=2.0.51,<2.1",
    "uvicorn>=0.51.0,<0.52",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx2>=2.7,<2.8",
    "mypy>=2.2,<3",
    "pytest>=9.1,<10",
    "ruff>=0.15,<0.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-config --strict-markers"

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src", "tests", "migrations"]

[tool.alembic]
script_location = "%(here)s/migrations"
